@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2011 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -259,9 +259,9 @@ public class LineWrappingTabPage extends FormatterTabPage {
             try {
                 wrappingStyle= new Integer(DefaultCodeFormatterConstants.getWrappingStyle(value));
                 indentStyle= new Integer(DefaultCodeFormatterConstants.getIndentStyle(value));
-                forceWrapping= new Boolean(DefaultCodeFormatterConstants.getForceWrapping(value));
+                forceWrapping= Boolean.valueOf(DefaultCodeFormatterConstants.getForceWrapping(value));
             } catch (IllegalArgumentException e) {
-				forceWrapping= new Boolean(false);
+				forceWrapping= Boolean.FALSE;
 				indentStyle= new Integer(DefaultCodeFormatterConstants.INDENT_DEFAULT);
 				wrappingStyle= new Integer(DefaultCodeFormatterConstants.WRAP_NO_SPLIT);
 			}
