@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2011 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -388,7 +388,7 @@ public class ProjectsWorkbookPage extends BuildPathBasePage {
 		int res= dialog.open();
 		if (res == Window.OK || res == AccessRulesDialog.SWITCH_PAGE) {
 			selElement.setAttribute(CPListElement.ACCESSRULES, dialog.getAccessRules());
-			selElement.setAttribute(CPListElement.COMBINE_ACCESSRULES, new Boolean(dialog.doCombineAccessRules()));
+			selElement.setAttribute(CPListElement.COMBINE_ACCESSRULES, Boolean.valueOf(dialog.doCombineAccessRules()));
 			fProjectsList.refresh();
 			fClassPathList.dialogFieldChanged(); // validate
 
